Add DHCP table generator

--- a/router/DHCPTable.gen.html
+++ b/router/DHCPTable.gen.html
@@ -73,7 +73,9 @@ function SoryBy(F)
 var table = new Array();
 var sortby = "";
 
+// BEGIN USER TABLE
 table[0] = new AAA('LocalName','192.168.1.124','00:00:00:00:00:00','23:42:28','LAN');
+// END USER TABLE
 
 
 function AAA(name,ip,mac,time,iface)
